--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
 	<p> Projects </p>
-	<a href="http://richiem.github.com/moire1/">Moire 1</a>
+	<a href="http://richiem.github.com/moire1/">Moire 1</a> <br>
+	<a href="http://richiem.github.com/lines-emanating/">Lines (Seizure Warning)</a> <br>
+	<a href="http://richiem.github.com/ux-designer/">UX Designer (Seizure Warning)</a>
 </html>
