--- a/salad/index.html
+++ b/salad/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>hey ya'll, how ya doin</title>
+        <title>oh hey, how ya'll doin?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
