--- a/week4preso/index.html
+++ b/week4preso/index.html
@@ -68,14 +68,14 @@
 						<p>Two participants can anonymously pass information back forth.</p> </br>
 					</section>
 					<section>
-						<h2>Open-ended interactions</h2>
-						<p>Different options for mode of interaction:</p> </br>
+						<h3>Choosing a method of interaction</h3>
+						<p>What's the most compelling, yet flexible, way to interact anonymously?!?!</p>
 						<p class="fragment">Text messages</p>
 						<p class="fragment">A shared drawing canvas</p>
 						<p class="fragment">[Modulated] Voice</p>
 						<p class="fragment">Your movements are controlling the ambience of the other's booth</p>
-						<p class="fragment">What's the most compelling, yet flexible, way to interact anonymously?!?!</p>
-						
+						<p class="fragment">You're playing a game together? Connection through play :)</p>
+						<p class="fragment">Synchronized dancing / movement</p>
 					</section>
 					<section>
 						<h2>Intentions</h2>
@@ -98,7 +98,7 @@
 						<p class="fragment">A light for when someone is in the other booth?</p>
 						<p class="fragment">One creator, one watcher?</p>
 						<p class="fragment">What's the manner of interaction -- text, drawing, answering a question,  voice?</p>
-						<p>Tech: Hosting a messaging server locally... </p>
+						<p class="fragment">Tech: Hosting a messaging server locally... </p>
 					</section>
 				</section>
 
