adding bubbles link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<p> Projects </p>
 	<a href="http://richiem.github.com/moire1/">Moire 1</a> <br>
-	<a href="http://richiem.github.com/bubbles/">Bubbles</a>
+	<a href="http://richiem.github.com/bubbles/">Bubbles</a> <br>
 	<a href="http://richiem.github.com/lines-emanating/">Lines (Seizure Warning)</a> <br>
-	<a href="http://richiem.github.com/ux-designer/">UX Designer (Seizure Warning)</a>
+	<a href="http://richiem.github.com/ux-designer/">UX Designer (Seizure Warning)</a> <br>
 </html>
