--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<p> Projects </p>
 	<a href="http://richiem.github.com/moire1/">Moire 1</a> <br>
 	<a href="http://richiem.github.com/bubbles/">Bubbles</a> <br>
+	<a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> <br>
 	<a href="http://richiem.github.com/lines-emanating/">Lines (Seizure Warning)</a> <br>
 	<a href="http://richiem.github.com/ux-designer/">UX Designer (Seizure Warning)</a> <br>
 </html>
