--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
-	<p> Projects </p>
-	<a href="http://richiem.github.com/moire1/">Moire 1</a> <br>
-	<a href="http://richiem.github.com/bubbles/">Bubbles</a> <br>
-	<a href="http://richiem.github.com/pixels/">Pixels</a> <br>
-	<a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> <br>
-	<a href="http://richiem.github.com/lines-emanating/">Lines (Seizure Warning)</a> <br>
-	<a href="http://richiem.github.com/ux-designer/">UX Designer (Seizure Warning)</a> <br>
+	<a href="http://www.github.com/richiem" target="_blank">GitHub</a>
+	<a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
+	<a href="resume.pdf" target="_blank">Resume</a>
+	<h2>Richie Mendelsohn</h2> 
+	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I like Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
+	<p>Evidently I don't like CSS.</p>
+	<h3>Projects </h3>
+	<a href="http://richiem.github.com/moire1/">Moire</a> <p> An interactive Moire Pattern generator</p>
+	<a href="http://richiem.github.com/bubbles/">Bubbles</a> <p> These bubbles are a bunch of dinguses, so pop em!</p>
+	<a href="http://richiem.github.com/pixels/">Pixels</a> <p>Playing with granularity</p>
+	<a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> <p>Don't know where to put that sticker on your laptop? This will help</p>
+	<a href="http://richiem.github.com/lines-emanating/">Emanating</a> <p>Lines (Seizure Warning</p>
+	<a href="http://richiem.github.com/ux-designer/">UX Designer</a> <p>My UX Designer portfolio (Seizure Warning)</p>
+	<a href="http://muzaktheory.appspot.com/">MuzakTheory</a> <p>Web tool for learning new scales and chords.  Java / GWT</p>
+	
 </html>
