--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
 	<a href="resume.pdf" target="_blank">Resume</a>
 	<h2>Richie Mendelsohn</h2> 
-	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I like Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
+	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I create in Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
 	<p>Evidently I don't like CSS.</p>
 	<h3>Projects </h3>
 	<a href="http://richiem.github.com/moire1/">Moire</a> <p> An interactive Moire Pattern generator</p>
