added album in a day

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> <p>Don't know where to put that sticker on your laptop? This will help</p>
 	<a href="http://richiem.github.com/lines-emanating/">Emanating</a> <p>Lines (Seizure Warning</p>
 	<a href="http://richiem.github.com/ux-designer/">UX Designer</a> <p>My UX Designer portfolio (Seizure Warning)</p>
+	<a href="http://mendelbot.bandcamp.com/">Album In a Day</a> <p>I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
 	<a href="http://muzaktheory.appspot.com/">MuzakTheory</a> <p>Web tool for learning new scales and chords.  Java / GWT</p>
 	
 </html>
