--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
 	<a href="http://www.github.com/richiem" target="_blank">GitHub</a>
 	<a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
+	<a href="http://soundcloud.com/mendelbot" target="_blank">SoundCloud</a> 
 	<a href="resume.pdf" target="_blank">Resume</a>
 	<h2>Richie Mendelsohn</h2> 
 	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I create in Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
 	<p>Evidently I don't like CSS.</p>
 	<h3>Projects </h3>
-	<a href="http://richiem.github.com/moire1/">Moire</a> <p> An interactive Moire Pattern generator</p>
-	<a href="http://richiem.github.com/bubbles/">Bubbles</a> <p> These bubbles are a bunch of dinguses, so pop em!</p>
-	<a href="http://richiem.github.com/pixels/">Pixels</a> <p>Playing with granularity</p>
-	<a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> <p>Don't know where to put that sticker on your laptop? This will help</p>
-	<a href="http://richiem.github.com/lines-emanating/">Emanating</a> <p>Lines (Seizure Warning</p>
-	<a href="http://richiem.github.com/ux-designer/">UX Designer</a> <p>My UX Designer portfolio (Seizure Warning)</p>
-	<a href="http://mendelbot.bandcamp.com/">Album In a Day</a> <p>I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
-	<a href="http://muzaktheory.appspot.com/">MuzakTheory</a> <p>Web tool for learning new scales and chords.  Java / GWT</p>
+	<p> <a href="http://richiem.github.com/moire1/">Moire</a> An interactive Moire Pattern generator</p>
+	<p> <a href="http://richiem.github.com/bubbles/">Bubbles</a> These bubbles are a bunch of dinguses, so pop em!</p>
+	<p> <a href="http://richiem.github.com/pixels/">Pixels</a> Playing with granularity</p>
+	<p> <a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> Don't know where to put that sticker on your laptop? This will help</p>
+	<p> <a href="http://richiem.github.com/lines-emanating/">Emanating</a> Lines (Seizure Warning</p>
+	<p> <a href="http://richiem.github.com/ux-designer/">UX Designer</a> My UX Designer portfolio (Seizure Warning)</p>
+	<p> <a href="http://mendelbot.bandcamp.com/">Album In a Day</a> I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
+	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Java / GWT</p>
 	
 </html>
