--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p> <a href="http://richiem.github.com/bubbles/">Bubbles</a> These bubbles are a bunch of dinguses, so pop em!</p>
 	<p> <a href="http://richiem.github.com/pixels/">Pixels</a> Playing with granularity</p>
 	<p> <a href="http://richiem.github.com/stickerPicker/">StickerPicker</a> Don't know where to put that sticker on your laptop? This will help</p>
-	<p> <a href="http://richiem.github.com/lines-emanating/">Emanating</a> Lines (Seizure Warning</p>
+	<p> <a href="http://richiem.github.com/lines-emanating/">Emanating</a> Lines (Seizure Warning)</p>
 	<p> <a href="http://richiem.github.com/ux-designer/">UX Designer</a> My UX Designer portfolio (Seizure Warning)</p>
 	<p> <a href="http://mendelbot.bandcamp.com/">Album In a Day</a> I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
 	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Java / GWT</p>
