--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h2>Richie Mendelsohn</h2> 
 	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I create in Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
 	<p>Evidently I don't like CSS.</p>
-	<h3>Projects </h3>
+	<h3>Stuff I've Made</h3>
 	<p> <a href="http://richiem.github.com/moire1/">Moire</a> An interactive Moire Pattern generator</p>
 	<p> <a href="http://richiem.github.com/bubbles/">Bubbles</a> These bubbles are a bunch of dinguses, so pop em!</p>
 	<p> <a href="http://richiem.github.com/pixels/">Pixels</a> Playing with granularity</p>
@@ -14,6 +14,6 @@
 	<p> <a href="http://richiem.github.com/lines-emanating/">Emanating</a> Lines (Seizure Warning)</p>
 	<p> <a href="http://richiem.github.com/ux-designer/">UX Designer</a> My UX Designer portfolio (Seizure Warning)</p>
 	<p> <a href="http://mendelbot.bandcamp.com/">Album In a Day</a> I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
-	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Java / GWT</p>
+	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Made with Java / GWT</p>
 	
 </html>
