adding glowy to site

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
+<!-- http://www.w3schools.com/css/css_navbar.asp -->
 	<a href="http://www.github.com/richiem" target="_blank">GitHub</a>
 	<a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
 	<a href="http://soundcloud.com/mendelbot" target="_blank">SoundCloud</a> 
 	<a href="resume.pdf" target="_blank">Resume</a>
-	<h2>Richie Mendelsohn</h2> 
+	<h2>Richie Mendelsohn</h2>
 	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I create in Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
 	<p>Evidently I don't like CSS.</p>
 	<h3>Stuff I've Made</h3>
+	<p> <a href="http://richiem.github.com/glowy/">Glowy</a> Vibing with color transitions</p>
 	<p> <a href="http://richiem.github.com/moire1/">Moire</a> An interactive Moire Pattern generator</p>
 	<p> <a href="http://richiem.github.com/bubbles/">Bubbles</a> These bubbles are a bunch of dinguses, so pop em!</p>
 	<p> <a href="http://richiem.github.com/pixels/">Pixels</a> Playing with granularity</p>
@@ -15,5 +17,6 @@
 	<p> <a href="http://richiem.github.com/ux-designer/">UX Designer</a> My UX Designer portfolio (Seizure Warning)</p>
 	<p> <a href="http://mendelbot.bandcamp.com/">Album In a Day</a> I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
 	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Made with Java / GWT</p>
+	<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2449233811/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://mendelbot.bandcamp.com/album/conference-call-with-your-inner-shaman">Conference Call With Your Inner Shaman by mendelbot</a></iframe>
 	
 </html>
