FuzzyVibe -- chillin so hardddd

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<p>Hiya, I'm a software engineer. I like to dabble in interactive digital arts and audio.  I create in Java, Python, and flavors of javascript (AngularJS, node.js, p5.js).</p>
 	<p>Evidently I don't like CSS.</p>
 	<h3>Stuff I've Made</h3>
-	<p> <a href="http://richiem.github.com/glowy/">Glowy</a> Vibing with color transitions</p>
+	<p> <a href="http://richiem.github.com/fuzzyVibe/">Fuzzy Vibe</a> Vibing with color transitions, meet me at the sunset</p>
+	<p> <a href="http://richiem.github.com/glowy/">Glowy</a> Vibing with color transitions, slow n steady</p>
 	<p> <a href="http://richiem.github.com/moire1/">Moire</a> An interactive Moire Pattern generator</p>
 	<p> <a href="http://richiem.github.com/bubbles/">Bubbles</a> These bubbles are a bunch of dinguses, so pop em!</p>
 	<p> <a href="http://richiem.github.com/pixels/">Pixels</a> Playing with granularity</p>
