title / head / body

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <!-- http://www.w3schools.com/css/css_navbar.asp -->
+	<head>
+		<title>Richie Mendelsohn</title>
+	</head>
+	<body>
 	<a href="http://www.github.com/richiem" target="_blank">GitHub</a>
 	<a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
 	<a href="http://soundcloud.com/mendelbot" target="_blank">SoundCloud</a> 
@@ -19,5 +23,5 @@
 	<p> <a href="http://mendelbot.bandcamp.com/">Album In a Day</a> I wrote, recorded, and released an entire album in a day, all in the CrapArt model.</p>
 	<p> <a href="http://muzaktheory.appspot.com/">MuzakTheory</a> Web tool for learning new scales and chords.  Made with Java / GWT</p>
 	<!-- <iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2449233811/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://mendelbot.bandcamp.com/album/conference-call-with-your-inner-shaman">Conference Call With Your Inner Shaman by mendelbot</a></iframe> -->
-	
+	<body>
 </html>
