--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>♥</p>
+                    <p>♥ richie</p>
                 </div>
             </div>
             <!-- /.row -->
