--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>♥</p>
+                    <p>♥ richie</p>
                 </div>
             </div>
             <!-- /.row -->
