--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
                         <br><br>
                         
-                        In the past, I've worked as a Software Engineer at <a href="http://www.google.com" target="_blank">Google</a>
+                        In the past, I've worked as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
                         and <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
 
                         I like building things in Java, Python, and various web technologies including AngularJS, node.js, and p5.js.  In the past, I've worked in C++, Perl, and Matlab.
