--- a/theWorm/index.html
+++ b/theWorm/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>Remember Your Friends</title>
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
-    <script language="javascript" type="text/javascript" src="moirePoints.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/cv_utils.js"></script>
+  <script language="javascript" type="text/javascript" src="moirePoints.js"></script>
   <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jsfeat/0.0.8/jsfeat-min.js"></script> -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
