--- a/theWorm/index.html
+++ b/theWorm/index.html
@@ -2,15 +2,15 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <!-- uncomment lines below to include extra p5 libraries -->
   <script language="javascript" src="libraries/p5.dom.js"></script>
-  <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only nee  } else if (key.name == 'p') {
-d one of these values set. -->
+  <script language="javascript" src="libraries/p5.sound.js"></script>
+
+  <script language="javascript" type="text/javascript" src="libraries/cv_utils.js"></script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jsfeat/0.0.8/jsfeat-min.js"></script> -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 
 <body>
+	  <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </body>
 </html>
