--- a/about.html
+++ b/about.html
@@ -51,7 +51,10 @@
                         <a href="https://www.linkedin.com/in/richiemendelsohn" target="_blank">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="about.html" target="_blank">About</a>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +75,8 @@
 
                         <br><br>
                         
-                        In the past, I've worked as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
-                        and <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
+                        In the past, I've worked as a Venture Designer at <a href="http://www.ideo.com" target="_blank">IDEO</a>, built a recommendation engine for podcasts at <a href="http://audiosear.ch" target="_blank">Pop Up Archive</a>, built tools and testing infrastrure as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
+                        and wrote automation frameworks to test robotics at <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
 
                         I like building things in Java, Python, and various web technologies including AngularJS, node.js, and p5.js.  In the past, I've worked in C++, Perl, and Matlab.
 
