--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
+                    <li>
+                        <a href="resume.pdf" target="_blank">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -67,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    <h3>I'm a software engineer and creative technologist who dabbles in interactive digital arts and audio.</h3> <br>
+                    <h3>I'm a software engineer and creative technologist who designs interactive digital art and audio.</h3> <br>
                 </h1>
             </div>
         </div>
@@ -75,6 +78,15 @@
 
         <!-- Projects Row -->
         <div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="http://plenty.market">
+                    <img class="img-responsive" src="img/Plenty.png" alt="">
+                </a>
+                <h3>
+                    <a href="http://plenty.market">IDEO Futures: Venture Design</a>
+                </h3>
+                <p>Venture Design at IDEO: Plenty -- a peer-to-peer market for restaurants to share ingredients</p>
+            </div>
             <div class="col-md-4 portfolio-item">
                 <a href="moire1/">
                     <img class="img-responsive" src="img/Moire700x400.png" alt="">
@@ -92,15 +104,6 @@
                     <a href="fuzzyVibe/">Fuzzy Vibe</a>
                 </h3>
                 <p>Vibing with color transitions, meet me at the sunset</p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="glowy/">
-                    <img class="img-responsive" src="img/Glowy700x400.png" alt="">
-                </a>
-                <h3>
-                    <a href="glowy/">Glowy</a>
-                </h3>
-                <p>Vibing with color transitions, slow n steady</p>
             </div>
         </div>
         <!-- /.row -->
