--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="http://plenty.market">
-                    <img class="img-responsive" src="img/Plenty.png" alt="">
+                    <img class="img-responsive" src="img/plenty.png" alt="">
                 </a>
                 <h3>
                     <a href="http://plenty.market">IDEO Futures: Venture Design</a>
