elise is a brat

--- a/learning.html
+++ b/learning.html
@@ -116,6 +116,10 @@
                         <br><br>
 
                         I've learned to prototype experiences -- 'Don't get ready, get started.' As corny as that is (sorry Eric), when you actually start something you are effectively testing a hypothesis against a real experience where you are collecting data, which is much more legit than sitting around thinking about it.  Por ejemplo, purrrhaps I'm thinking about whether I wanna be a performer and do improv.  Instead of sitting around and thinking about it, I signed up for a class and collected real data about my subjective experience of doing improv. After the class, I was able to say, 'ah that's dope'.
+
+                        <br><br>
+
+                        I've learned that my sister Elise is an annoying brat.
                     </h3>
                 </h1>
             </div>
