--- a/puaViz/comparingTopics/index.html
+++ b/puaViz/comparingTopics/index.html
@@ -1,50 +1,66 @@
 <head>
   <!-- Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <!-- Plots go in blank <div> elements. 
     You can size them in the plot layout,
     or give the div a size as shown here.
 -->
+<span> Y-Axis </span> <select id="y-axis"></select>
+<span style="padding-left:20px;"> X-Axis </span> <select id="x-axis"></select>
 <div id="tester" style="width:90%;height:550px;"></div>
 
 <script>
-TESTER = document.getElementById('tester');
 
-Plotly.d3.csv('allTheData.csv', function(err, rows){
-var continents = ['Asia', 'Europe', 'Africa', 'Oceania', 'Americas'];
-function unpack(rows, key) {
-  return rows.map(function(row) { return row[key]; });
-}
+var runPlotFunction = function (xValue, yValue) {
+  TESTER = document.getElementById('tester');
+  Plotly.d3.csv('allTheData.csv', function(err, rows){
+    var topics = Object.keys(rows[0]).slice(3);
+    if ($("#y-axis option").length === 0) {
+      topics = topics.sort();
+      $.each(topics, function(i, v) {
+        if (v==="News / Politics") {
+          $("#y-axis").append("<option selected>"+v+"</option>");
+        } else {
+          $("#y-axis").append("<option>"+v+"</option>");
+        }
+        if (v==="Colloquial") {
+          $("#x-axis").append("<option selected>"+v+"</option>");
+        } else {
+          $("#x-axis").append("<option>"+v+"</option>");
+        }
+      });
+    }
+    function unpack(rows, key) {
+      return rows.map(function(row) { return row[key]; });
+    }
 
-var xxAxis = "Sports"
-var yyAxis = "Colloquial"
-
-var data = continents.map(function(continent) {
-  var rowsFiltered = rows.filter(function(row) {
-      //return (row.continent === continent) && (+row.year === YEAR);
-      return true;
-  });
-  return {
+    var data = [{
       mode: 'markers',
-      name: continent,
-      x: unpack(rowsFiltered, xxAxis),
-      y: unpack(rowsFiltered, yyAxis),
-      text: unpack(rowsFiltered, 'Show Name'),
+      // name: 'topics',
+      x: unpack(rows, xValue),
+      y: unpack(rows, yValue),
+      text: unpack(rows, 'Show Name'),
       marker: {
-          symbol: 'circle',
-          sizemode: 'area',
-          size: 13,
+        symbol: 'circle',
+        sizemode: 'area',
+        size: 8,
       }
-  };
-});
-var layout = {
-  xaxis: {title: xxAxis},
-  yaxis: {title: yyAxis},
-  margin: {t: 20},
-  hovermode: 'closest'
+    }];
+    var layout = {
+      xaxis: {title: xValue},
+      yaxis: {title: yValue},
+      margin: {t: 20},
+      hovermode: 'closest'
+    };
+    Plotly.plot(TESTER, data, layout, {showLink: false});
+  });
 };
-Plotly.plot(TESTER, data, layout, {showLink: false});
+$("select").on("change", function () {
+  Plotly.purge(tester);
+  runPlotFunction($("#x-axis").val(), $("#y-axis").val());
 });
+runPlotFunction("News / Politics", "Colloquial");
 </script>
