--- a/puaViz/comparingTopics/index.html
+++ b/puaViz/comparingTopics/index.html
@@ -47,6 +47,7 @@ var runPlotFunction = function (xValue, yValue) {
         symbol: 'circle',
         sizemode: 'area',
         size: 8,
+        color: '#8B35B0',
       }
     }];
     var layout = {
