adding podcast machine learning

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    <h3>I'm a software engineer and creative technologist who designs interactive digital art and audio.</h3> <br>
+                    <h3>I'm a software engineer and creative technologist who uses machine learning and data to create interactive digital art and audio.</h3> <br>
                 </h1>
             </div>
         </div>
@@ -78,6 +78,15 @@
 
         <!-- Projects Row -->
         <div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="http://plenty.market">
+                    <img class="img-responsive" src="img/PodcastClusters700x400.png" alt="">
+                </a>
+                <h3>
+                    <a href="http://blog.audiosear.ch/using-topics-to-make-sense-of-podcasts/">Understanding Podcasts With Machine Learning</a>
+                </h3>
+                <p>Clustering and recommending podcasts using unsupervised machine learning</p>
+            </div>
             <div class="col-md-4 portfolio-item">
                 <a href="http://plenty.market">
                     <img class="img-responsive" src="img/plenty.png" alt="">
@@ -95,15 +104,6 @@
                     <a href="moire1/">Moire</a>
                 </h3>
                 <p>An interactive Moire Pattern generator</p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="fuzzyVibe/">
-                    <img class="img-responsive" src="img/FuzzyVibe700x400.png" alt="">
-                </a>
-                <h3>
-                    <a href="fuzzyVibe/">Fuzzy Vibe</a>
-                </h3>
-                <p>Vibing with color transitions, meet me at the sunset</p>
             </div>
         </div>
         <!-- /.row -->
@@ -143,6 +143,15 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
+                <a href="fuzzyVibe/">
+                    <img class="img-responsive" src="img/FuzzyVibe700x400.png" alt="">
+                </a>
+                <h3>
+                    <a href="fuzzyVibe/">Fuzzy Vibe</a>
+                </h3>
+                <p>Vibing with color transitions, meet me at the sunset</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
                 <a href="ux-designer/">
                     <img class="img-responsive" src="img/UXDesigner700x400.png" alt="">
                 </a>
@@ -150,15 +159,6 @@
                     <a href="ux-designer/">UX Designer</a>
                 </h3>
                 <p>My UX Designer portfolio (Seizure Warning)</p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="http://mendelbot.bandcamp.com/">
-                    <img class="img-responsive" src="img/ConferenceCall700x400.png" alt="">
-                </a>
-                <h3>
-                    <a href="http://mendelbot.bandcamp.com/">Conference Call With Your Inner Shaman</a>
-                </h3>
-                <p>On December 11, 2015, I wrote, recorded, and released an entire album in a day, based on the CrapArt model.</p>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="http://muzaktheory.appspot.com/">
