fit on one line. Right after the ex-gf commit

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img class="img-responsive" src="img/PodcastClusters700x400.png" alt="">
                 </a>
                 <h3>
-                    <a href="http://blog.audiosear.ch/using-topics-to-make-sense-of-podcasts/">Understanding Podcasts With Machine Learning</a>
+                    <a href="http://blog.audiosear.ch/using-topics-to-make-sense-of-podcasts/">Recommend Podcasts With ML</a>
                 </h3>
                 <p>Clustering and recommending podcasts using unsupervised machine learning</p>
             </div>
