--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
 
                         <br><br>
                         
-                        In the past, I've worked as a Venture Designer at <a href="http://www.ideo.com" target="_blank">IDEO</a>, built a recommendation engine for podcasts at <a href="http://audiosear.ch" target="_blank">Pop Up Archive</a>, built tools and testing infrastrure as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
+                        In the past, I've built a recommendation engine for podcasts using machine learning at <a href="http://audiosear.ch" target="_blank">Pop Up Archive</a>, worked as a Venture Designer at <a href="http://www.ideo.com" target="_blank">IDEO</a>, built tools and testing infrastrure as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
                         and wrote automation frameworks to test robotics at <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
 
-                        I like building things in Java, Python, and various web technologies including AngularJS, node.js, and p5.js.  In the past, I've worked in C++, Perl, and Matlab.
+                        I like building things in Python, Java, and various web technologies including Ruby on Rails, AngularJS, node.js, and p5.js.  In the past, I've worked in C++, Perl, and Matlab, but I think it's best we both stay far away from Perl.
 
                         <br> <br>
 
@@ -86,7 +86,7 @@
 
                         <br> <br>
 
-                        I'm most easily reached at rickymendel at gmail dot com.
+                        I'm most easily reached at rickymendel atttttt gmail dotttttt com.
                     </h3>
                 </h1>
             </div>
