--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="http://plenty.market">
+                <a href="podcasts/">
                     <img class="img-responsive" src="img/PodcastClusters700x400.png" alt="">
                 </a>
                 <h3>
@@ -88,7 +88,7 @@
                 <p>Clustering and recommending podcasts using unsupervised machine learning</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="http://plenty.market">
+                <a href="https://github.com/richieM/sharedPantry">
                     <img class="img-responsive" src="img/plenty.png" alt="">
                 </a>
                 <h3>
