--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img class="img-responsive" src="img/PodcastClusters700x400.png" alt="">
                 </a>
                 <h3>
-                    <a href="http://blog.audiosear.ch/using-topics-to-make-sense-of-podcasts/">Recommend Podcasts With ML</a>
+                    <a href="podcasts/">Recommend Podcasts With ML</a>
                 </h3>
                 <p>Clustering and recommending podcasts using unsupervised machine learning</p>
             </div>
@@ -92,7 +92,7 @@
                     <img class="img-responsive" src="img/plenty.png" alt="">
                 </a>
                 <h3>
-                    <a href="http://plenty.market">IDEO Futures: Venture Design</a>
+                    <a href="https://github.com/richieM/sharedPantry">IDEO Futures: Venture Design</a>
                 </h3>
                 <p>Venture Design at IDEO: Plenty -- a peer-to-peer market for restaurants to share ingredients</p>
             </div>
