--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                 <p>Playing with granularity</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="stickerPicker/">
-                    <img class="img-responsive" src="img/StickerPicker700x400.png" alt="">
+                <a href="https://docs.google.com/document/d/1sirW5KNrpBnjxdUiVt8uEo6q95zFxqUNlTu1iDn0FiY/edit?usp=sharing">
+                    <img class="img-responsive" src="img/glockchain.png" alt="">
                 </a>
                 <h3>
-                    <a href="stickerPicker/">StickerPicker</a>
+                    <a href="https://docs.google.com/document/d/1sirW5KNrpBnjxdUiVt8uEo6q95zFxqUNlTu1iDn0FiY/edit?usp=sharing">GlockChain</a>
                 </h3>
-                <p>Don't know where to put that sticker on your laptop? This will help</p>
+                <p>Blockchain connected gun for increasing police transparency</p>
             </div>
         </div>
         <!-- /.row -->
